# pika-backup

./: .gitignore  .gitlab-ci.yml  .gitmodules  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  meson.build  meson_options.txt  pika-backup.doap
data/: APPLICATION_ID  APPLICATION_NAME  app.Daemon.desktop  app.Daemon.service.in  app.Monitor.desktop  app.Monitor.desktop.in  app.Monitor.service.in  app.desktop  app.desktop.in  app.metainfo.xml  app.metainfo.xml.in  app.service.in  de.hemio.PikaPileBackup.desktop  de.hemio.PikaPileBackup.metainfo.xml  meson.build  org.gnome.gitlab.sophie_h.PikaPileBackup.desktop  org.gnome.gitlab.sophie_h.PikaPileBackup.metainfo.xml  resources.gresource.xml.in  style.css
data/resources/: meson.build  shortcuts-dialog.ui  style-dark.css  style-hc.css  style.css
data/resources/gtk/: help-overlay.ui
data/ui/: about.ui  device_missing.ui  dialog_about.ui  dialog_add_config.ui  dialog_device_missing.ui  dialog_encryption_password.ui  dialog_storage.ui  encryption_password.ui  main.ui  new.ui  new_backup.ui  overview_item.ui  password.ui  storage.ui
help/: LINGUAS  meson.build
help/C/: Makefile  feature-schedule.page  feature-shell.page  general-glossary.page  general-intro.page  index.page  recovery-other.page  recovery-pika.page  recovery.page  setup-drive.page  setup-gvfs.page  setup-remote.page
help/C/duck/: feature-schedule.duck  feature-shell.duck  general-glossary.duck  general-intro.duck  index.duck  recovery-other.duck  recovery-pika.duck  recovery.duck  setup-drive.duck  setup-gvfs.duck  setup-remote.duck
help/bg/: bg.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/eu/: eu.po
help/hu/: hu.po
help/nl/: nl.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sl/: sl.po
help/sr/: sr.po
help/sv/: sv.po
help/tr/: tr.po
help/uk/: uk.po
pika-backup/: Cargo.toml
pika-backup-common/: Cargo.toml
pika-backup-common/src/: borg.rs  config.rs  globals.rs  lib.rs  prelude.rs  utils.rs
pika-backup-common/src/borg/: communication.rs  error.rs  functions.rs  json.rs  log_json.rs  prelude.rs  process.rs  scripts.rs  size_estimate.rs  status.rs  task.rs  utils.rs
pika-backup-common/src/config/: backup.rs  error.rs  exclude.rs  history.rs  loadable.rs  local.rs  pattern.rs  prune.rs  remote.rs  repository.rs  schedule.rs  schedule_status.rs  writeable.rs
pika-backup-common/src/schedule/: requirements.rs
pika-backup-common/src/utils/: action.rs  oo7_workaround.rs  upower.rs
pika-backup-monitor/: Cargo.toml
pika-backup-monitor/src/: action.rs  connect.rs  dbus.rs  error.rs  globals.rs  init.rs  lib.rs  main.rs  notification.rs  prelude.rs
pika-backup-monitor/src/connect/: event.rs
pika-backup-monitor/src/schedule/: init.rs  status.rs
pika-backup/src/: action.rs  app.rs  backup_status.rs  config.rs  dbus.rs  error.rs  globals.rs  lib.rs  main.rs  meson.build  operation.rs  prelude.rs  repo.rs  shell.rs  status.rs  toast_size_estimate.rs  ui.rs  utils.rs  widget.rs
pika-backup/src/borg/: communication.rs  error.rs  functions.rs  invert_command.rs  log_json.rs  prelude.rs  process.rs  scripts.rs  size_estimate.rs
pika-backup/src/config/: backup.rs  exclude.rs  loadable.rs  local.rs  remote.rs  schedule.rs  writeable.rs
pika-backup/src/daemon/: action.rs  dbus.rs  error.rs  globals.rs  init.rs  notification.rs  prelude.rs  schedule.rs
pika-backup/src/schedule/: requirements.rs
pika-backup/src/ui/: app.rs  backup_status.rs  dbus.rs  error.rs  globals.rs  operation.rs  prelude.rs  repo.rs  shell.rs  status.rs  toast_size_estimate.rs  utils.rs  widget.rs
pika-backup/src/utils/: borg.rs  config_io.rs  dbus.rs  df.rs  duration.rs  ext.rs  flatpak_info.rs  host.rs  notification.rs  password_storage.rs  repo_cache.rs
pika-backup/src/widget/: app_window.rs  app_window.ui  detail.rs  detail.ui  dialog.rs  encryption_settings.rs  folder_row.rs  overview.rs  overview.ui  status_icon.rs  status_row.rs  wrap_box.rs
pika-backup/tests/: borg_integration.rs  exclude_patterns.rs  exclude_predefined.rs  size_estimate.rs  test_common.rs
src/: action.rs  borg.rs  config.rs  daemon.rs  globals.rs  history.rs  lib.rs  main.rs  meson.build  prelude.rs  schedule.rs  shared.rs  ui.rs  utils.rs
src/borg/: communication.rs  error.rs  functions.rs  invert_command.rs  json.rs  log_json.rs  msg.rs  prelude.rs  process.rs  scripts.rs  size_estimate.rs  status.rs  task.rs  utils.rs
src/config/: backup.rs  error.rs  exclude.rs  history.rs  loadable.rs  local.rs  pattern.rs  prune.rs  remote.rs  repo_cache.rs  repository.rs  schedule.rs  schedule_status.rs  writeable.rs
src/daemon/: action.rs  dbus.rs  dbus_action_group.rs  error.rs  globals.rs  init.rs  notification.rs  prelude.rs  schedule.rs  utils.rs
src/daemon/connect/: event.rs  init.rs
src/daemon/schedule/: init.rs  requirements.rs  status.rs
src/schedule/: requirements.rs
src/ui/: about.rs  actions.rs  app.rs  app_window.rs  app_window.ui  archives.rs  backup_status.rs  builder.rs  config_list.rs  dbus.rs  detail.rs  device_missing.rs  dialog_about.rs  dialog_about.ui  dialog_add_config.rs  dialog_add_config.ui  dialog_archive_prefix.rs  dialog_archive_prefix.ui  dialog_check.rs  dialog_check.ui  dialog_check_result.rs  dialog_check_result.ui  dialog_delete_archive.rs  dialog_delete_archive.ui  dialog_device_missing.rs  dialog_device_missing.ui  dialog_encryption_password.rs  dialog_encryption_password.ui  dialog_exclude.rs  dialog_exclude.ui  dialog_exclude_pattern.rs  dialog_exclude_pattern.ui  dialog_include.rs  dialog_include.ui  dialog_info.rs  dialog_preferences.rs  dialog_preferences.ui  dialog_prune.rs  dialog_prune.ui  dialog_prune_review.rs  (+34 more)
src/ui/dialog_add_config/: event.rs  folder_button.rs  insert.rs
src/ui/dialog_setup/: add_task.rs  display.rs  event.rs  folder_button.rs  insert.rs  remote_location.rs
src/ui/page_archives/: cache.rs  display.rs  events.rs  init.rs
src/ui/page_backup/: display.rs  events.rs  execution.rs  (+1 more)
src/utils/: dbus.rs  host.rs  password.rs  upower.rs
(+378 files in other folders)
