[package]
name = "pika-backup"
description = "Keep your data safe"
version = "0.7.1"
authors = [
    "Sophie Herold <sophieherold@gnome.org>",
    "Fina Wilke <finaw@gnome.org>",
]
homepage = "https://apps.gnome.org/PikaBackup/"
repository = "https://gitlab.gnome.org/World/pika-backup"
edition = "2021"
default-run = "pika-backup"
rust-version = "1.75"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
async-std = { version = "1.10", features = ["attributes", "unstable"] }
async-trait = "0.1"
chrono = { version = "= 0.4.22", default-features = false, features = [
    "serde",
] }
chronoutil = "0.2"
const-str = "0.5"
default-env = "0.1"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
nix = { version = "0.27", features = ["fs", "user", "signal"] }
num-format = "0.4"
regex = { package = "fancy-regex", version = "0.12" }
shell-words = "1.0"
scopeguard = "1.1"
tempfile = "3.2"
walkdir = "2.3"
zxcvbn = "2.0"

# data types and handling
arc-swap = "1.0"
enclose = "1.1"
itertools = "0.12"
once_cell = "1.3"
quick-error = "2.0"
zeroize = "1.1"

# serde
serde = "1.0"
serde_derive = "1.0"
serde_ini = "0.2"
serde_json = "1.0"

# GNOME
adw = { package = "libadwaita", version = "0.5", features = ["v1_4"] }
gtk = { package = "gtk4", version = "0.7", features = ["gnome_45"] }
glib = { version = "0.18" }
gio = { version = "0.18" }

ashpd = "0.6"
gvdb-macros = "0.1"
oo7 = "0.2"
zbus = "3.1"
futures = "0.3.29"
tracing-subscriber = "0.3.18"
async-lock = "3.3.0"

[dev-dependencies]
matches = "0.1"
cmd_lib = "1.3"
tmp_env = "0.1"
