[workspace]
members = ["pika-backup", "pika-backup-daemon"]
resolver = "3"

[workspace.package]
description = "Keep your data safe"
version = "0.8.0-alpha"
authors = [
    "Sophie Herold <sophieherold@gnome.org>",
    "Fina Wilke <finaw@gnome.org>",
]
homepage = "https://apps.gnome.org/PikaBackup/"
repository = "https://gitlab.gnome.org/World/pika-backup"
edition = "2024"
rust-version = "1.90"
license = "GPL-3.0-only"

[profile.release]
lto = true
codegen-units = 1

[workspace.dependencies]
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "clock",
] }
chronoutil = "0.2"
const-str = "0.7"
default-env = "0.1"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
nix = { version = "0.30", features = ["fs", "user", "signal"] }
num-format = "0.4"
regex = { package = "fancy-regex", version = "0.16" }
shell-words = "1.0"
scopeguard = "1.1"
tempfile = "3.2"
walkdir = "2.3"
zxcvbn = "3.0"
tracing-subscriber = "0.3.18"
macro_rules_attribute = "0.2.2"

# async
async-process = "2.5.0"
async-trait = "0.1"
futures-channel = "0.3.31"
futures-util = "0.3.31"
smol = "2.0.2"
smol-macros = "0.1.1"

# data types and handling
arc-swap = "1.7"
enclose = "1.1"
itertools = "0.14"
quick-error = "2.0"
zeroize = "1.1"

# serde
serde = "1.0"
serde_derive = "1.0"
serde_ini = "0.2"
serde_json = "1.0"

# GNOME
adw = { package = "libadwaita", version = "0.8", features = ["v1_6"] }
gtk = { package = "gtk4", version = "0.10", features = ["gnome_47"] }
glib = "0.21"
gio = "0.21"

ashpd = { version = "0.12", default-features = false, features = [
    "async-std",
    "gtk4_wayland",
] }
gvdb-macros = "0.1"
oo7 = { version = "0.5", default-features = false, features = [
    "async-std",
    "openssl_crypto",
] }
zbus = "5.11.0"

# dev
matches = "0.1"
cmd_lib = "2.0"
tmp_env = "0.1"
chrono-tz = "0.10"
