option(
  'profile',
  type: 'combo',
  choices: [
    'release',
    'dev'
  ],
  value: 'release',
)
option(
  'app_id_suffix',
  type: 'combo',
  choices: [
    '',
    '.Devel'
  ],
  value: '',
)
option(
  'src_docs',
  type: 'boolean',
  value: false,
)
option(
  'build_src',
  type: 'boolean',
  value: true,
)
