pages = [
  'index.page',
  'feature-shell.page',
  'feature-schedule.page',
  'general-glossary.page',
  'general-intro.page',
  'setup-drive.page',
  'setup-gvfs.page',
  'setup-remote.page',
  'recovery-pika.page',
  'recovery-other.page',
]

media = [
  'media/setup-button.svg',
  'media/archives-button.svg',
  'media/eject-symbolic.svg',
]

gnome.yelp(
  meson.project_name(),
  sources: pages,
  media: media,
)
