[package]
name = "pika-backup-common"
description.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
test = []

[dependencies]
chrono.workspace = true
chronoutil.workspace = true
const-str.workspace = true
default-env.workspace = true
gettext-rs.workspace = true
nix.workspace = true
regex.workspace = true
tempfile.workspace = true
walkdir.workspace = true
macro_rules_attribute.workspace = true

# async
async-process.workspace = true
async-trait.workspace = true
futures-channel.workspace = true
futures-util.workspace = true
smol.workspace = true
smol-macros.workspace = true

# data types and handling
arc-swap.workspace = true
itertools.workspace = true
quick-error.workspace = true
zeroize.workspace = true

# serde
serde.workspace = true
serde_json.workspace = true

gtk.workspace = true
glib.workspace = true
gio.workspace = true

ashpd.workspace = true
oo7.workspace = true
zbus.workspace = true
tracing.workspace = true

[dev-dependencies]
matches.workspace = true
chrono-tz.workspace = true
