[package]
name = "pika-backup-monitor"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
chronoutil.workspace = true
const-str.workspace = true
default-env.workspace = true
gettext-rs.workspace = true
nix.workspace = true
num-format.workspace = true
regex.workspace = true
shell-words.workspace = true
scopeguard.workspace = true
tempfile.workspace = true
walkdir.workspace = true
zxcvbn.workspace = true
tracing-subscriber.workspace = true
macro_rules_attribute.workspace = true

# async
async-process.workspace = true
async-trait.workspace = true
futures-channel.workspace = true
futures-util.workspace = true
smol.workspace = true
smol-macros.workspace = true

# data types and handling
arc-swap.workspace = true
enclose.workspace = true
itertools.workspace = true
quick-error.workspace = true
zeroize.workspace = true

# serde
serde.workspace = true
serde_derive.workspace = true
serde_ini.workspace = true
serde_json.workspace = true

adw.workspace = true
gtk.workspace = true
glib.workspace = true
gio.workspace = true

ashpd.workspace = true
gvdb-macros.workspace = true
oo7.workspace = true
zbus.workspace = true
tracing.workspace = true
common.workspace = true

[dev-dependencies]
matches.workspace = true
cmd_lib.workspace = true
tmp_env.workspace = true
chrono-tz.workspace = true
