[package]
name = "pika-backup-monitor"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
gettext-rs.workspace = true
tracing.workspace = true

# async
async-process.workspace = true
smol.workspace = true

# data types and handling
arc-swap.workspace = true
itertools.workspace = true
quick-error.workspace = true

# serde
serde.workspace = true

glib.workspace = true
gio.workspace = true

ashpd.workspace = true
oo7.workspace = true
zbus.workspace = true

common.workspace = true
