[package]
name = "pika-backup-monitor"
description.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
gettext-rs.workspace = true
tracing.workspace = true

# async
async-process.workspace = true
smol.workspace = true

# data types and handling
arc-swap.workspace = true
itertools.workspace = true
quick-error.workspace = true

# serde
serde.workspace = true

glib.workspace = true
gio.workspace = true

ashpd.workspace = true
oo7.workspace = true
zbus.workspace = true

common.workspace = true
