[package]
name = "pika-backup"
description.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
chronoutil.workspace = true
const-str.workspace = true
default-env.workspace = true
gettext-rs.workspace = true
nix.workspace = true
num-format.workspace = true
regex.workspace = true
scopeguard.workspace = true
shell-words.workspace = true
tempfile.workspace = true
walkdir.workspace = true
zxcvbn.workspace = true

# async
async-process.workspace = true
futures-channel.workspace = true
smol.workspace = true

# data types and handling
arc-swap.workspace = true
enclose.workspace = true
itertools.workspace = true
quick-error.workspace = true
zeroize.workspace = true

# serde
serde.workspace = true
serde_ini.workspace = true
serde_json.workspace = true

adw.workspace = true
gtk.workspace = true
glib.workspace = true
gio.workspace = true

ashpd.workspace = true
gvdb-macros.workspace = true
oo7.workspace = true
zbus.workspace = true
tracing.workspace = true

common.workspace = true

[dev-dependencies]
cmd_lib.workspace = true
common = { workspace = true, features = ["test"] }
macro_rules_attribute.workspace = true
matches.workspace = true
smol-macros.workspace = true
tmp_env.workspace = true
